--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body >
+    <body class="paper-bg">
+      <div id="form-wrapper">
+        <form id="form" class="fancy-border paper-bg">
+          <h2>Put players names</h2>
+          <div class="player-input">
+            <label for="player1">o</label>
+            <input type="text" id="player1" value="Player 1" class="fancy-border" />
+          </div>
+          <div class="player-input">
+            <label for="player2">x</label>
+            <input type="text" id="player2" value="Player 2" class="fancy-border" />
+          </div>
+          <button class="btn" id="start-btn">Start a game</button>
+        </form>
+      </div>
     <main id="main">
+      <div id="display-controller">
+        Player <span id="current-symbol"></span> turn
+      </div>
       <div id="grid-wrapper">
-        <div id="grid">
-       
-        </div>
+        <div id="grid"></div>
       </div>
     </main>
   </body>
