all base function finished

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <body class="paper-bg">
       <div id="form-wrapper">
         <form id="form" class="fancy-border paper-bg" onsubmit="event.preventDefault();">
-          <h2>Put players names</h2>
+          <h2 class="text">Put players names</h2>
           <div class="player-input">
             <label for="player1">o</label>
-            <input type="text" id="player1" name="player1" value="Player 1" class="fancy-border" />
+            <input type="text" name="player1" value="Player 1" class="fancy-border" />
           </div>
           <div class="player-input">
             <label for="player2">x</label>
-            <input type="text" id="player2" name="player2" value="Player 2" class="fancy-border" />
+            <input type="text"  name="player2" value="Player 2" class="fancy-border" />
           </div>
           <button class="btn" id="start-btn">Start a game</button>
         </form>
@@ -33,5 +33,14 @@
       </div>
       <button class="btn" id="reset-btn">Reset game</button>
     </main>
+    <div id="msg-wrapper" class="hidden">
+      <div id="msg" class="fancy-border">
+        <div id="game-result" class="text">Game Tie!<br>Player 1 Won!</div>
+        <div class="btn-wrapper">
+          <button class="btn" id="play-again-btn">Play again?</button>
+          <button class="btn" id="reset-btn">Reset game</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
