--- a/index.html
+++ b/index.html
@@ -8,22 +8,38 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body >
-    <body class="paper-bg">
-      <div id="form-wrapper">
-        <form id="form" class="fancy-border paper-bg" onsubmit="event.preventDefault();">
-          <h2 class="text">Put players names</h2>
-          <div class="player-input">
-            <label for="player1">o</label>
-            <input type="text" name="player1" value="Player 1" class="fancy-border" />
-          </div>
-          <div class="player-input">
-            <label for="player2">x</label>
-            <input type="text"  name="player2" value="Player 2" class="fancy-border" />
-          </div>
-          <button class="btn" id="start-btn">Start a game</button>
-        </form>
-      </div>
+
+  <body class="paper-bg">
+    <div id="form-wrapper">
+      <form
+        id="form"
+        class="fancy-border paper-bg"
+        onsubmit="event.preventDefault();"
+      >
+        <h2 class="text">Put players names</h2>
+        <div class="player-input">
+          <label for="player1name">o</label>
+          <input
+            id="player1name"
+            type="text"
+            name="player1"
+            value="Player 1"
+            class="fancy-border"
+          />
+        </div>
+        <div class="player-input">
+          <label for="player2name">x</label>
+          <input
+            id="player2name"
+            type="text"
+            name="player2"
+            value="Player 2"
+            class="fancy-border"
+          />
+        </div>
+        <button class="btn" id="start-btn">Start a game</button>
+      </form>
+    </div>
     <main id="main">
       <div id="turn-display">
         <span id="current-symbol"></span>
@@ -31,14 +47,14 @@
       <div id="grid-wrapper">
         <div id="grid"></div>
       </div>
-      <button class="btn" id="reset-btn">Reset game</button>
+      <button class="btn reset-btn">Reset game</button>
     </main>
     <div id="msg-wrapper" class="hidden">
       <div id="msg" class="fancy-border">
-        <div id="game-result" class="text">Game Tie!<br>Player 1 Won!</div>
+        <div id="game-result" class="text">Game Tie!<br />Player 1 Won!</div>
         <div class="btn-wrapper">
           <button class="btn" id="play-again-btn">Play again?</button>
-          <button class="btn" id="reset-btn">Reset game</button>
+          <button class="btn reset-btn">Reset game</button>
         </div>
       </div>
     </div>
